--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         src="https://cdn.jsdelivr.net/npm/lightweight-charts@4.1.0/dist/lightweight-charts.standalone.production.js"></script>
 
     <!-- External Styles -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/styles/styles.css">
 </head>
 
 <body>
@@ -300,9 +300,9 @@
     </footer>
 
     <!-- Application Script -->
-    <script src="ui_options.js" defer></script>
+    <script src="assets/js/ui_options.js" defer></script>
     <!-- <script src="dummy-data.js"></script> -->
-    <script src="app.js" defer></script>
+    <script src="assets/js/app.js" defer></script>
 </body>
 
 </html>
